nesc-frontend/src/test/resources/integration/programs/good/good18/I.nc
interface I<T>
{
   command T c(T* ptr);
   event void e(int code, T* ptr);
}
