nesc-frontend/src/test/resources/integration/programs/bad/bad23/I.nc
interface I
{
   command void c();
   event void e();
}
